--- a/blog/style.css
+++ b/blog/style.css
@@ -153,19 +153,17 @@ a{
 
 .section-content {
   margin-top: 0.5rem;
-  padding-left: 1rem;      /* Controls the indentation */
+  padding-left: 1rem;      
   font-size: 1rem;
   color: #444;
   line-height: 1.6;
 }
 
-/* Indent paragraph text inside content-section */
 .section-content p {
   padding-left: 2rem;
   margin-bottom: 1rem;
 }
 
-/* Indent code blocks consistently */
 .section-content .code-block {
   margin-left: 2rem;
   margin-top: 0.5rem;
